# NeuronTrace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NeuronTrace.txt  NeuronTrace_PRD.docx  NeuronTrace_PRD.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
adapters/: README.md
adapters/claude-code/: install.sh
adapters/codex/: install.sh
adapters/gemini/: install.sh
adapters/generic/: neurontrace-watch.sh
docs/: NeuronTrace_PRD.md  architecture.md  development.md  feedback-protocol.md  policies.md  quickstart.md  usecases.md
neurontrace/: Cargo.toml  build.rs
neurontrace-common/: Cargo.toml
neurontrace-common/src/: lib.rs
neurontrace-ebpf/: Cargo.toml
neurontrace-ebpf/src/: helpers.rs  main.rs  maps.rs  policy.rs
neurontrace-ebpf/src/hooks/: exec.rs  file.rs  mod.rs  network.rs  ptrace.rs  signal.rs
neurontrace/src/: bpf.rs  cgroup.rs  cli.rs  config.rs  main.rs  preflight.rs
neurontrace/src/events/: mod.rs
neurontrace/src/feedback/: mod.rs
neurontrace/src/labels/: generation.rs  mod.rs
neurontrace/src/policy/: mod.rs  parser.rs  types.rs
policies/: claude-code.yaml  codex.yaml  generic-agent.yaml
scripts/: demo.sh
xtask/: Cargo.toml
xtask/src/: main.rs
