[package]
name = "neurontrace-common"
description = "Shared types between NeuronTrace BPF programs and userspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
user = ["thiserror", "serde", "aya"]

[dependencies]
thiserror = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"], optional = true }
aya = { version = "0.13", optional = true }
